# LD29

./: CMakeLists.txt  README.md  Readme.txt
BearClaw/: CMakeLists.txt
BearClaw/src/Components/: CameraComponent.cpp  CameraComponent.h  TestRenderComponent.cpp  TestRenderComponent.h  TwoDimRenderComponent.cpp  TwoDimRenderComponent.h
BearClaw/src/Gui/: FontFile.cpp  FontFile.h  FontString.cpp  FontString.h
BearClaw/src/Renderer/: Camera.cpp  Camera.h  Material.cpp  Material.h  RenderNode.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h
BearClaw/src/Renderer/Utils/: HLShaderWrapper.cpp  HLShaderWrapper.h
BearClaw/src/Resource/: Mesh.cpp  Mesh.h  ShaderManager.cpp  ShaderManager.h  Shapes.cpp  Shapes.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
BearClaw/src/Scene/: Component.cpp  Component.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
BearClaw/src/System/: Environment.cpp  Environment.h  InputManager.cpp  InputManager.h  Interfaces.h
BearClaw/src/System/File/: FileSystem.cpp  FileSystem.h
BearClaw/src/System/OS/: GlfwBackend.cpp  PlatformIncludes.h  Window.cpp  WindowsBackend.cpp  WindowsBackend.h
BearClaw/src/System/StateManagement/: GameApp.cpp  GameApp.h  StateManager.cpp  StateManager.h
BearClaw/src/Utils/: BcString.cpp  ShaderProgram.h
BearClaw/src/Utils/Math/: Mat4.h  Vec3.h
LD29/: CMakeLists.txt
LD29/src/: MainState.cpp  MainState.h  SceneLoader.cpp  SceneLoader.h  main.cpp
LD29/src/Components/: BillboardComponent.cpp  BillboardComponent.h  FistComponent.cpp  FistComponent.h  PlaneComponent.cpp  PlaneComponent.h
LD29/src/Nodes/: NPCNode.cpp  NPCNode.h  ObamaNode.cpp  ObamaNode.h  PlayerNode.cpp  PlayerNode.h
LD29/src/States/: AboutState.cpp  AboutState.h  BirthCertState.cpp  BirthCertState.h  DeathState.cpp  DeathState.h  GameStartState.cpp  GameStartState.h  GameState.cpp  GameState.h  WinState.cpp  WinState.h
dependencies/: CMakeLists.txt
dependencies/SoLoud/: CMakeLists.txt
dependencies/SoLoud/src/backend/sdl/: soloud_sdl.cpp
dependencies/assimp/: CMakeLists.txt
dependencies/assimp/code/: AssimpCExport.cpp  Exporter.cpp  ObjExporter.cpp  ObjFileData.h  ObjFileImporter.cpp  ObjFileParser.cpp  PlyExporter.cpp  STLLoader.cpp
